升级部分依赖版本，jdk升级到20