@@ -21,29 +21,29 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <java.version>1.8</java.version>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
-        <spring-boot.version>2.7.6</spring-boot.version>
-        <spring-cloud.version>2021.0.5</spring-cloud.version>
-        <spring-cloud-alibaba.version>2021.0.4.0</spring-cloud-alibaba.version>
+        <java.version>20</java.version>
+        <maven.compiler.source>20</maven.compiler.source>
+        <maven.compiler.target>20</maven.compiler.target>
+        <spring-boot.version>2.7.12</spring-boot.version>
+        <spring-cloud.version>2021.0.7</spring-cloud.version>
+        <spring-cloud-alibaba.version>2021.0.5.0</spring-cloud-alibaba.version>
         <aviator.version>5.3.3</aviator.version>
-        <hutool.version>5.8.18</hutool.version>
+        <hutool.version>5.8.19</hutool.version>
         <knife4j-openapi2-spring-boot-starter.version>4.1.0</knife4j-openapi2-spring-boot-starter.version>
-        <kryo.version>5.4.0</kryo.version>
+        <kryo.version>5.5.0</kryo.version>
         <mockito.version>5.2.0</mockito.version>
         <maven-invoker.version>3.1.0</maven-invoker.version>
         <guava.version>31.1-jre</guava.version>
-        <jmh.version>1.35</jmh.version>
-        <joda-time.version>2.12.4</joda-time.version>
+        <jmh.version>1.36</jmh.version>
+        <joda-time.version>2.12.5</joda-time.version>
         <tlog.version>1.5.0</tlog.version>
         <jctools-core.version>4.0.1</jctools-core.version>
-        <flink.version>1.16.0</flink.version>
+        <flink.version>1.17.1</flink.version>
     </properties>
 
     <dependencyManagement>
         <dependencies>
-            <!-- spring boot 依赖 -->
+            <!--Spring Boot 依赖 -->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
@@ -163,6 +163,20 @@
                 </plugin>
             </plugins>
         </pluginManagement>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.12.4</version>
+                <configuration>
+                    <!-- 添加JVM参数 -->
+                    <argLine>
+                        --add-opens java.base/java.lang=ALL-UNNAMED
+                        --add-opens java.base/java.util=ALL-UNNAMED
+                    </argLine>
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
 
 </project>
